task8/namespc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels: 
    name: development

---
apiVersion: v1
kind: Namespace
metadata:
  name: qa
  labels: 
    name: testing

---

apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels: 
    name: production

---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels: 
    name: monitoring
